--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,3 +47,10 @@ li {
 #firstNav {
     background-color: #3D5B5B;
 }
+
+#map {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 500px;
+}
